[build-system]
requires = ["setuptools", "wheel", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
#archs = { windows = ["ARM64", "AMD64"], linux = ["x86_64"], macos = ["x86_64", "arm64"] }
archs = { windows = ["ARM64"] }

#[build-system]
#build-backend = 'mesonpy'
#requires = ['meson-python', 'wheel', 'numpy']

[project]
name = 'scikit-fmm'
version = '2024.08.10'
description = 'An extension module implementing the fast marching method'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}
url = 'https://github.com/scikit-fmm/scikit-fmm'
authors = [
  {name = 'Jason Furtney', email = 'jkfurtney@gmail.com'},
]
keywords         = ['fast marching method', 'Eikonal equation', 'interface', 'boundary']
classifiers      = ["Development Status :: 5 - Production/Stable",
                    "License :: OSI Approved :: BSD License",
                    "Operating System :: OS Independent",
                    "Topic :: Scientific/Engineering",
                    "Intended Audience :: Science/Research",
                    "Programming Language :: C++",
                    "Programming Language :: Python :: 3"]
